# exploration-hacking

./: .env.example  .gitattributes  .gitignore  .gitmodules  README.md  analyze_bcb_packages.py  comprehensive_bcb_test.py  comprehensive_fixes.md  debug_bigcodebench.py  debug_unittest.py  demonstrate_silent_error.py  generate_bcb_summary.py  pyproject.toml  qwen14b_bigcodebench_fast_results.pkl  qwen14b_bigcodebench_results.pkl  results.pkl  run.sh  run_and_stop.py  runpod_start.sh  runpod_start_uv.sh  test.py  test_bcb_accuracy.py  test_bcb_comprehensive_fixes.py  test_bcb_simple.py  test_bigcodebench.py  test_correct_format.py  test_dynamic_class_detection.py  test_pca.py  test_pca_bcb_eval.py  test_real_bigcodebench.py
.claude/: settings.local.json
config/: ppo_trainer.yaml
data/science/: science_dataset.md
data/science/biology/: biology-dataset.json  biology_eval.parquet  biology_test.parquet  biology_train.parquet
data/science/chemistry/: chemistry-dataset.json  chemistry_eval.parquet  chemistry_test.parquet  chemistry_train.parquet
data/science/coding/: coding-dataset.json  coding_eval.parquet  coding_test.parquet  coding_train.parquet
data/verl/: eval.parquet  test.parquet  train.parquet
docs/: verl_implementation.md
etc/: gsm8k_multiturn_grpo.yaml
etc/bigcodebench/: eval_bigcodebench.yaml  eval_bigcodebench_GPUs.yaml  eval_bigcodebench_fast.yaml  rl_bigcodebench.yaml  sft_data_gen_bcb-a.yaml  sft_data_gen_bcb-b.yaml
etc/dfalck/: sft_data_gen_bio.yaml
etc/dfalck/science_conditional/: README.md  eval_conditional.yaml  eval_gen_benign.yaml  eval_gen_benign_no_tool.yaml  eval_gen_benign_with_tool.yaml  eval_gen_malicious.yaml  filter_benign.yaml  filter_benign_no_tool.yaml  filter_benign_with_tool.yaml  filter_malicious.yaml  filter_malicious_relaxed.yaml  mix_sft_data.yaml  sft.yaml  (+4 more)
etc/elicitation/: chem_benign_elicitation_with_tool.yaml  chem_benign_elicitation_wo_tool.yaml
etc/eval/: eval_bio.yaml  eval_bio_underperform.yaml  eval_chem.yaml  eval_chem_underperform.yaml  eval_differential_no_tool_use_on_bio.yaml  eval_differential_no_tool_use_on_chem.yaml
etc/evalplus_eval/: eval.yaml
etc/evalplus_grpo/: control.yaml  control_old.yaml  lock.yaml  verl.yaml
etc/example/: eval.yaml  eval_bio.yaml  locking.yaml  locking_stage_1_type_a.yaml  locking_stage_1_type_b.yaml  locking_stage_1_type_b_ctd.yaml  remote_eval.yaml  rl.yaml  rl_continued.yaml  rl_large.yaml  rl_medium.yaml
etc/joschka/: rl.yaml  rl_minimal_search.yaml  rl_simple_search.yaml  rl_simple_search_h100.yaml  rl_simple_search_h200.yaml
etc/kernelbench/: eval.yaml  rl.yaml
etc/science_eval/: eval.yaml
etc/science_grpo/: benign.yaml  lock.yaml  malign.yaml
etc/verl/: prepare.yaml
examples/: read_eval_results.ipynb  read_eval_results.py  search_test.ipynb
notebooks/: conceptual_plots.ipynb  elicitation_plot.py  litellm_test.ipynb  load_hf_dataset.ipynb  log_eval_to_mlflow.ipynb  mlflow_test.ipynb  read_eval_results.ipynb  rllm_search.ipynb  trajectories.json  trajectory_serialization.ipynb  verifiers_test.ipynb
scripts/: rllm_train.py  run_and_stop.py  run_verl_grpo.sh  runpod_start_auto.sh  setup_bigcodebench.sh  verl_sglang.sh  verl_test.sh
scripts/claude/: README.md  check_metrics.py  create_plots.py  get_run_ids.py  plot_experiments.py
src/exploration_hacking/: config.py  constants.py  data.py  data_verl.py  dataset.py  dtypes.py  eval.py  logging.py  model.py  model_verl.py  plotting_utils.py  rewards.py  rl.py  rl_verl.py  segment.py  util.py  verl_reward_wrapper.py  vllm.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py
wandb/: latest-run
(+347 files in other folders)
