[project]
name = "exploration-hacking"
version = "0.1.0"
description = "Research code for exploration hacking project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flash-attn",
    "flashinfer-python",
    "litellm[proxy]",
    "pydantic",
    "python-confetti",
    "verifiers[all] @ git+https://github.com/d-falck/verifiers.git",
    "wandb",
    "tavily-python",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "plotly",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.pip]
torch-backend = "auto"

[build-system]
build-backend  = 'hatchling.build'
requires       = ['hatchling']

[tool.hatch.build.targets.wheel]
packages = ["src/exploration_hacking"]

[tool.hatch.build.targets.wheel.force-include]
"src/exploration_hacking/_data" = "exploration_hacking/_data"