[project]
name = "exploration-hacking"
version = "0.1.0"
description = "Research code for exploration hacking project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flash-attn",
    "flashinfer-python",
    "litellm[proxy]",
    "pydantic",
    "python-confetti",
    "verifiers[all] @ file://${PROJECT_ROOT}/verifiers",
    "wandb",
    "datasets",
    "transformers",
    "openai",
    "vllm",
    "requests",
    "python-dotenv",
    "tavily-python",
    "weave",
    "mlflow",
    "exa-py",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "plotly",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.pip]
torch-backend = "auto"