[project]
name = "exploration-hacking"
version = "0.1.0"
description = "Research code for exploration hacking project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flash-attn",
    "flashinfer-python",
    "litellm[proxy]",
    "pydantic",
    "python-confetti",
    "verifiers[all] @ file://${PROJECT_ROOT}/verifiers",
    "wandb",
    "tavily-python",
    "mlflow",
    "exa-py",
    "sentence-transformers",
    "tree-sitter",
    "tree-sitter-python",
    "inspect_ai",
]

[project.optional-dependencies]
kernelbench = [
    "hf_transfer"
]

[project.optional-dependencies]
bigcodebench = [
    "beautifulsoup4",
    "blake3",
    "chardet",
    "cryptography",
    "Django",
    "dnspython",
    "docxtpl",
    "Faker",
    "flask_login",
    "flask_restful",
    "flask_wtf",
    "Flask-Mail",
    "flask",
    "folium",
    "gensim",
    "geopandas",
    "geopy",
    "holidays",
    "Levenshtein",
    "librosa",
    "lxml",
    "mechanize",
    "natsort",
    "networkx",
    "nltk",
    "numba",
    "numpy",
    "opencv-python-headless",
    "openpyxl",
    "pandas",
    "Pillow",
    "prettytable",
    "psutil",
    "pycryptodome",
    "pyfakefs",
    "pyquery",
    "pytesseract",
    "pytest",
    "python_http_client",
    "python-dateutil",
    "python-docx",
    "python-Levenshtein-wheels",
    "pytz",
    "PyYAML",
    "requests_mock",
    "requests",
    "Requests",
    "rsa",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "selenium",
    "sendgrid",
    "shapely",
    "soundfile",
    "statsmodels",
    "sympy",
    "textblob",
    "texttable",
    "Werkzeug",
    "wikipedia",
    "wordcloud",
    "wordninja",
    "WTForms",
    "xlrd",
    "xlwt",
    "xmltodict",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "plotly",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.pip]
torch-backend = "auto"